--- a/conf/maze_1.yaml
+++ b/conf/maze_1.yaml
@@ -1,12 +1,24 @@
 --- 
-# Ball
-ball_size: 10
-ball_x: 5
-ball_y: 5
+Ball:
+    Point:
+       _x_coordinate: 5
+       _y_coordinate: 5
+    size: 10
 
 # Maze
 maze_height: 250
 maze_length: 250
 walls: 
-    - "0, 0, 0, 0"
-    - "0, 0, 250, 0"
+    - Point:
+        _x_coordinate: 0
+        _y_coordinate: 0
+    - Point:
+        _x_coordinate: 0
+        _y_coordinate: 250
+    - Point:
+        _x_coordinate: 0
+        _y_coordinate: 0
+    - Point:
+        _x_coordinate: 250
+        _y_coordinate: 0
+    
